Ajout Langages & Frameworks

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ li {
 }
 header {
   text-align: center;
-  height: 300vh;
+  height: 100vh;
   background: url(./media/header.jpg) no-repeat fixed 50% 50%;
   background-size: cover;
 }
@@ -93,4 +93,18 @@ header .button:hover a {
   color: #e2dedb;
   transition: all 0.3s ease-in-out;
   text-decoration: none;
+}
+/* ********************** LANGAGES ********************************* */
+#langages {
+  padding: 80px 80px 80px 50px;
+  margin: 20px 0 0 6%;
+  height: 620px;
+  width: 47%;
+  max-width: 640px;
+  background: linear-gradient(105deg, #f05053ce, #f0b73c);
+  clip-path: polygon(0 10%, 100% 10%, 100% 90%, 76% 90%, 74% 100%, 66% 90%, 0 90%);
+}
+#langages .bar {
+  padding: 10px 0 4px;
+  letter-spacing: 0.1em;
 }
