--- a/style.css
+++ b/style.css
@@ -344,3 +344,26 @@ clip-path: polygon(0 10%, 93% 10%, 93% 90%, 75% 90%, 80% 99%, 64% 89%, 0 89%);
     transform: translateX(0) translateY(0);
   }
 }
+/* ********************** SOFT SKILLS ********************************* */
+#other-skills {
+  margin-top: 80px;
+  padding: 50px 100px 100px 100px;
+  width: 100%;
+  background: rgb(233,205,217);
+  background: radial-gradient(circle, rgba(233,205,217,1) 0%, rgba(204,216,231,1) 100%);
+  clip-path: polygon(0 11%, 100% 7%, 100% 92%, 0 85%);
+}
+#other-skills h3 {
+  transform: rotate(-3.2deg);
+  font-size: 3em;
+  padding-top: 30px;
+  color: #ebe8e8;
+  text-shadow: 0 -1px 4px rgba(255, 255, 255, 0.842), 0 -2px 10px rgba(255, 255, 0, 0.842), 0 -10px 10px #ff8000d5, 0 -18px 40px rgba(255, 0, 0, 0.842);    
+}
+.cloud {
+  text-align: center;
+  padding: 50px 0;
+  font-size: 2em;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 0px #FFFFFF, 5px 4px 0px rgba(0,0,0,0.15);
+}
