--- a/style.css
+++ b/style.css
@@ -354,11 +354,11 @@ clip-path: polygon(0 10%, 93% 10%, 93% 90%, 75% 90%, 80% 99%, 64% 89%, 0 89%);
   clip-path: polygon(0 11%, 100% 7%, 100% 92%, 0 85%);
 }
 #other-skills h3 {
-  transform: rotate(-3.2deg);
+  transform:  rotateZ(-0.8deg);
   font-size: 3em;
   padding-top: 30px;
   color: #ebe8e8;
-  text-shadow: 0 -1px 4px rgba(255, 255, 255, 0.842), 0 -2px 10px rgba(255, 255, 0, 0.842), 0 -10px 10px #ff8000d5, 0 -18px 40px rgba(255, 0, 0, 0.842);    
+  text-shadow: 0 -1px 4px rgba(255, 255, 255, 0.842), 0 -2px 10px rgba(255, 0, 106, 0.842), 0 -10px 10px #4D1A12, 0 -18px 40px rgba(255, 0, 0, 0.842);    
 }
 .cloud {
   text-align: center;
@@ -366,4 +366,76 @@ clip-path: polygon(0 10%, 93% 10%, 93% 90%, 75% 90%, 80% 99%, 64% 89%, 0 89%);
   font-size: 2em;
   text-transform: uppercase;
   text-shadow: 2px 2px 0px #FFFFFF, 5px 4px 0px rgba(0,0,0,0.15);
+}
+/* ********************** HOBBIES ********************************* */
+/* Carousel */
+#hobbies{
+  margin: 100px 10% 0 10%;
+  padding: 40px 10px 60px 40px;
+  box-shadow: 5px 5px 5px 5px #a8a8a9;
+  background-color: transparent;
+  height: 100%;
+}
+#hobbies h3 {
+  font-size: 3em;
+  padding-bottom: 15px;
+}
+.slider {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.slide {
+	text-align: center;
+	display: none;
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+.gif{
+
+  border-radius: 65% 35% 70% 30% / 59% 62% 38% 41%;
+  width: 50%; 
+  height: 100%;
+}
+.active-slide {
+    display: block;
+}
+
+.slider-nav {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.arrow-prev {
+  margin-right: 45px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 9px;
+}
+
+.arrow-next {
+  margin-left: 45px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 9px;
+}
+
+.slider-dots {
+  list-style: none;
+  display: inline-block;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+.slider-dots li {
+  color: #bbbcbc;
+  display: inline;
+  font-size: 30px;
+  margin-right: 5px;
+}
+
+.slider-dots li.active-dot {
+  color: #363636;
 }
