--- a/style.css
+++ b/style.css
@@ -385,7 +385,6 @@ clip-path: polygon(0 10%, 93% 10%, 93% 90%, 75% 90%, 80% 99%, 64% 89%, 0 89%);
 	width: 100%;
 	height: 100%;
 }
-
 .slide {
 	text-align: center;
 	display: none;
@@ -393,49 +392,112 @@ clip-path: polygon(0 10%, 93% 10%, 93% 90%, 75% 90%, 80% 99%, 64% 89%, 0 89%);
 	width: 100%;
 	height: 100%;
 }
-.gif{
-
-  border-radius: 65% 35% 70% 30% / 59% 62% 38% 41%;
-  width: 50%; 
+.container{
+  margin: auto;
+  width: 100%;
   height: 100%;
+}
+.gif{
+  border-radius: 20%;
+  width: 300px; 
+  height: 200px;
 }
 .active-slide {
     display: block;
 }
-
 .slider-nav {
   text-align: center;
   margin-top: 20px;
 }
-
 .arrow-prev {
   margin-right: 45px;
   display: inline-block;
   vertical-align: top;
   margin-top: 9px;
 }
-
 .arrow-next {
   margin-left: 45px;
   display: inline-block;
   vertical-align: top;
   margin-top: 9px;
 }
-
 .slider-dots {
   list-style: none;
   display: inline-block;
   padding-left: 0;
   margin-bottom: 0;
 }
-
 .slider-dots li {
   color: #bbbcbc;
   display: inline;
   font-size: 30px;
   margin-right: 5px;
 }
-
 .slider-dots li.active-dot {
   color: #363636;
+}
+
+/* ********************** FOOTER ********************************* */
+footer {
+  background: url(./media/fond-parcours.jpg) 50% 0% no-repeat fixed;
+  background-size: cover;
+  text-align: center ;
+  padding: 160 px 50px 5 50px;
+}
+footer h3 {
+  padding: 0 0 60px 0;
+  font-size: 2.5em;
+}
+.footer-icons {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  max-width: 60%;
+}
+.network {
+  font-size: 4em;
+  border: 1px solid #b3aca7;
+  padding: 30px 45px;
+  color: #726659;
+  z-index:  -1 !important;
+  border-radius: 50%;
+}
+.network:hover {
+  background: #b3aca7;
+  color: #e2dedb;
+  transition: all 0.3s ease-in-out;
+}
+
+
+
+.arrow {
+  margin: -20 auto;
+  padding-top: 15px;
+  animation: arrow linear 1.5s;
+  animation-iteration-count: infinite;
+}
+@keyframes arrow {
+  0% {
+    transform: translateY(0px);
+  }
+  38% {
+    transform: translateY(8px);
+  }
+  0% {
+    transform: translateY(0px);
+  }
+}
+.arrow a {
+  font-size: 3em;
+  border: none;
+  color: #726659;
+}
+.arrow:hover i {
+  transform: scale(1.6);
+  transition: 0.5s ease-in-out;
+  color: #726659;
+}
+footer p {
+  font-size: 0.9em;
+  letter-spacing: 0.3em;
 }
